...
        isRecipeSaved = !isRecipeSaved
        delegate?.onSaveButton(with: indexPath.item)
    }
    
    private func setupButtonImage() {
        guard
            let bookmark = UIImage(systemName: Constants.saved)?.withTintColor(.black, renderingMode: .alwaysOriginal),
            let bookmarkFill = UIImage(systemName: Constants.unsaved)?.withTintColor(.black, renderingMode: .alwaysOriginal)
        else { return }
        isRecipeSaved
        ? saveButton.setImage(bookmarkFill, for: .normal)
        : saveButton.setImage(bookmark, for: .normal)
    }
...
